# agentbrain

./: .gitignore  DESIGN.md  README.md  pyproject.toml
src/agentbrain/: __init__.py  db.py  models.py  schema.py
src/agentdb/: __init__.py  db.py  models.py  schema.py
src/metabrain/: __init__.py  db.py  models.py  schema.py
tests/: test_agentdb.py
