[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-db"
version = "0.1.0"
description = "A SQLite-backed memory layer for AI agents. Read at start, write at end."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Aria Han" }]
keywords = ["agents", "memory", "sqlite", "llm", "ai", "checkpoint", "orchestration"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ariaxhan/agent-db"
Repository = "https://github.com/ariaxhan/agent-db"
Issues = "https://github.com/ariaxhan/agent-db/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentdb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
