[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-db"
version = "1.0.0"
description = "A zero-dependency SQLite memory layer for AI agents that learns what works: patterns graduate to proven preferences via a built-in experiment loop."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Aria Han" }]
keywords = ["agents", "memory", "sqlite", "llm", "ai", "checkpoint", "orchestration", "self-improving", "reinforcement"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ariaxhan/agent-db"
Repository = "https://github.com/ariaxhan/agent-db"
Issues = "https://github.com/ariaxhan/agent-db/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# Reserved for an opt-in semantic-recall backend. The core stays zero-dependency;
# the moat is the learn → prove → graduate loop, not embedding search.
embeddings = []

[tool.hatch.build.targets.wheel]
packages = ["src/agentdb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
